--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -2,8 +2,12 @@
 name: Danuta Sampson
 avatar: /static/images/avatar.png
 occupation: Senior Professor
-company: Lion Eyes Institute
-email: Danuta.sampson@lei.org.au 
+company: Lions Eye Institute
+email: Danuta.sampson@lei.org.au
+linkedin: https://www.linkedin.com/in/danuta-danka-sampson-31754579/
+twitter: https://x.com/damasampson
 ---
 
-Danuta (Danka) Sampson is an internationally trained translational researcher jointly appointed between the Lions Eye Institute and the University of Western Australia. She designs and constructs non-invasive optics-based imaging instruments and develops standardised workflows for ophthalmic image and data analysis. Her long-term career goal is to equip clinicians, biologists and scientists with standardised hardware and software tools to study retinal neuro-vascular units in health and disease, prevent and monitor retinal photoreceptors and vascular diseases, and make a real difference to patients.
+<a href="https://research-repository.uwa.edu.au/en/persons/danka-sampson">Danuta (Danka) Sampson</a> is an internationally trained translational researcher jointly appointed between the Lions Eye Institute and the University of Western Australia. She designs and constructs non-invasive optics-based imaging instruments and develops standardised workflows for ophthalmic image and data analysis. Her long-term career goal is to equip clinicians, biologists and scientists with standardised hardware and software tools to study retinal neuro-vascular units in health and disease, prevent and monitor retinal photoreceptors and vascular diseases, and make a real difference to patients.
+
+<span class="font-bold">Email</span>: Danuta.sampson@lei.org.au
