fix class name warning

--- a/data/authors/madeleine.mdx
+++ b/data/authors/madeleine.mdx
@@ -11,4 +11,4 @@ email: Danuta.sampson@lei.org.au
 
 <a href="https://datascience.uchicago.edu/people/madeleine-torcasso/">Madeleine Torcasso</a> is an AI in Science Postdoctoral Fellow at the University of Chicago in the Department of Radiology. Her expertise is in quantitative bio-image analysis using machine learning and other computer vision methods. She is passionate about helping create open-source tools to help support researchers in producing reproducible results.
 
-<span class="font-bold">Email</span>: durkeems@uchicago.edu
+<span className="font-bold">Email</span>: durkeems@uchicago.edu
