update contact information and avatars

--- a/data/authors/danuta.mdx
+++ b/data/authors/danuta.mdx
@@ -1,7 +1,7 @@
 ---
 name: Danuta Sampson
-avatar: /static/images/avatar.png
-occupation: Senior Professor
+avatar: /static/images/avatars/danka-sampson.jpg
+occupation: Translational researcher
 company: Lions Eye Institute
 email: Danuta.sampson@lei.org.au
 linkedin: https://www.linkedin.com/in/danuta-danka-sampson-31754579/
