--- a/data/authors/gavrielle.mdx
+++ b/data/authors/gavrielle.mdx
@@ -1,8 +1,8 @@
 ---
 name: Gavrielle Untracht
-avatar: /static/images/avatar.png
-occupation: Senior Professor
-company: Lion Eyes Institute
+avatar: /static/images/avatars/gavrielle-untracht.jpg
+occupation: Postdoctoral researcher
+company: Technical University of Denmark
 email: Danuta.sampson@lei.org.au 
 ---
 
