--- a/data/authors/madeleine.mdx
+++ b/data/authors/madeleine.mdx
@@ -1,13 +1,10 @@
 ---
 name: Madeleine Torcasso
-avatar: /static/images/avatar.png
-occupation: Senior Professor
-company: Lion Eyes Institute
+avatar: /static/images/avatars/madeleine-durkee.jpg
+occupation: Postdoctoral researcher
+company: University of Chicago
 email: Danuta.sampson@lei.org.au 
 ---
-
-
-
 
 <a href="https://datascience.uchicago.edu/people/madeleine-torcasso/">Madeleine Torcasso</a> is an AI in Science Postdoctoral Fellow at the University of Chicago in the Department of Radiology. Her expertise is in quantitative bio-image analysis using machine learning and other computer vision methods. She is passionate about helping create open-source tools to help support researchers in producing reproducible results.
 
