add date property to enforce chronic order rules

--- a/data/publication/Artificial Intelligence and Diabetic Retinopathy AI Framework, Prospective Studies, Head-to-head Validation, and Cost-effectiveness.mdx
+++ b/data/publication/Artificial Intelligence and Diabetic Retinopathy AI Framework, Prospective Studies, Head-to-head Validation, and Cost-effectiveness.mdx
@@ -1,5 +1,6 @@
 ---
 authors: 'Rajesh, A. E., Davidson, O. Q., Lee, C. S., & Lee, A. Y.'
+date: "2023-12-28"
 year: 2023
 topics: ['Review', 'DR']
 draft: false
