--- a/data/publication/Deep learning versus human graders for classifying diabetic retinopathy severity in a nationwide screening program.mdx
+++ b/data/publication/Deep learning versus human graders for classifying diabetic retinopathy severity in a nationwide screening program.mdx
@@ -1,5 +1,6 @@
 ---
 authors: 'Raumviboonsuk, P., et al.'
+date: "2019-12-28"
 year: 2019
 topics: ['Datasets', 'Software tools', 'DR']
 draft: false
