--- a/data/publication/Guidelines for clinical trial protocols for interventions involving artificial intelligence the SPIRIT-AI extension.mdx
+++ b/data/publication/Guidelines for clinical trial protocols for interventions involving artificial intelligence the SPIRIT-AI extension.mdx
@@ -1,5 +1,6 @@
 ---
 authors: 'Nature medicine, 26(9), 1351–1363.'
+date: "2020-12-30"
 year: 2020
 topics: ['Open science general resources']
 draft: false
