--- a/data/publication/Artificial Intelligence for Robust Glaucoma Screening Challenge.mdx
+++ b/data/publication/Artificial Intelligence for Robust Glaucoma Screening Challenge.mdx
@@ -1,5 +1,6 @@
 ---
 authors: 'de Vente, C., et al'
+date: '2024-12-29'
 year: 2024
 topics: ['Datasets', 'Software tools', 'Glaucoma']
 draft: false
