--- a/data/publication/Endpoints for clinical trials in ophthalmology.mdx
+++ b/data/publication/Endpoints for clinical trials in ophthalmology.mdx
@@ -1,5 +1,6 @@
 ---
 authors: 'Schmetterer, L., Scholl, H., Garhöfer, G., Janeschitz-Kriegl, L., Corvi, F., Sadda, S. R., & Medeiros, F. A.'
+date: "2023-12-29"
 year: 2023
 topics: ['Review and roadmaps', 'Protocols']
 draft: false
