resource: fix format

--- a/data/resource/COIN.mdx
+++ b/data/resource/COIN.mdx
@@ -7,4 +7,5 @@ href: 'https://www.ocularimaging.net/home'
 draft: false
 ---
 
-<span class="font-red">COIN</span> is a global research consortium established in 2019 as a common platform connecting researchers worldwide to contribute to the progress of eye research. They provide updates on the research progress of ocular imaging biomarkers, including choroid vascularity index (CVI), vitreous haze index (VHI), retinal vascularity index (RVI)
+<span className="font-red">COIN</span> is a global research consortium established in 2019as a common platform connecting researchers worldwide to contribute to the progress of eye research.
+They provide updates on the research progress of ocular imaging biomarkers, including choroid vascularity index (CVI), vitreous haze index (VHI), retinal vascularity index (RVI)
