--- a/data/resource/OCTA-ReVA.mdx
+++ b/data/resource/OCTA-ReVA.mdx
@@ -7,4 +7,8 @@ href: 'https://github.com/fiifijackson/OCTA-ReVA?tab=readme-ov-file'
 draft: false
 ---
 
-A semi-automated tool coded in Matlab and designed as stand-alone software with a graphical user interface. It supports single and batch processing. Enables saving of analysis results directly into Excel format and exporting of the images. The software applies the Frangi vesselness filter and five different segmentation methods (Otsu thresholding algorithm, fixed thresholding, mean thresholding, median thresholding, and the 3-sigma method). The software delivers several metrics, including blood vessel density (BVD), blood vessel tortuosity (BVT), blood vessel calibre (BVC), perfusion intensity density, vessel area flux and normalised blood flow index, fovea avascular zone area (FAZA), FAZ perimeter, FAZ irregularity.
+A semi-automated tool coded in Matlab and designed as stand-alone software with a graphical user interface.
+It supports single and batch processing.
+Enables saving of analysis results directly into Excel format and exporting of the images.
+The software applies the Frangi vesselness filter and five different segmentation methods (Otsu thresholding algorithm, fixed thresholding, mean thresholding, median thresholding, and the 3-sigma method).
+The software delivers several metrics, including blood vessel density (BVD), blood vessel tortuosity (BVT), blood vessel calibre (BVC), perfusion intensity density, vessel area flux and normalised blood flow index, fovea avascular zone area (FAZA), FAZ perimeter, FAZ irregularity.
