--- a/data/resource/Erlangen-Angio-Tool (EA-Tool).mdx
+++ b/data/resource/Erlangen-Angio-Tool (EA-Tool).mdx
@@ -1,9 +1,14 @@
 ---
-title: 'OCTA-500'
+title: 'Erlangen-Angio-Tool (EA-Tool)'
 date: '2024-12-30'
-topic: 'RETINA'
-category: 'OPEN-SOURCE DATABASES'
+topic: 'OPTICAL COHERENCE TOMOGRAPHY ANGIOGRAPHY'
+category: 'OPEN-SOURCE SOFTWARE TOOLS'
 draft: false
 ---
 
-A dataset of OCT and OCTA images: 3x3-mm (200 subjects) and 6x6-mm (300 subjects) a combination of healthy and diseased eyes, i.e., AMD, DR, CNV and RVO. The dataset provides images and annotations, six different maximum intensity projection images (covering various retinal depths), four types of text labels (age/gender/eye/disease) and seven types of segmentation labels (large vessels/capillary/artery/vein/2D FAZ/3D FAZ/retinal layers). Images are collected with RTVue-XR, Optovue, CA). The OCT and OCTA datasets are available <a href="https://ieee-dataport.org/open-access/octa-500">here</a>. <span class="font-bold">Publication</span>: Li et al. OCTA-500: A retinal dataset for optical coherence tomography angiography study. Medical Image Analysis 93 103092 (2024).
+A semi-automated tool coded in Matlab and designed as stand-alone software with a graphical user interface.
+The software applies the Frangi vesselness filter and Otsu thresholding algorithm for vessel segmentation.
+After uploading the OCTA image, the user marks the centre of the macular region.
+It helps to divide the image into 11 sub-regions for analysis.
+The software delivers microvascular metrics such as vessel area density and foveal avascular zone area.
+The details can be found <a className="text-primary-400 underline" href="https://karger.com/oph/article/243/1/75/263894/OCT-Angiography-Measurement-of-Retinal-Macular">here</a>
