--- a/data/resource/OCTA-500.mdx
+++ b/data/resource/OCTA-500.mdx
@@ -7,4 +7,9 @@ href: 'https://www.sciencedirect.com/science/article/pii/S1361841524000173'
 draft: false
 ---
 
-A dataset of OCT and OCTA images: 3x3-mm (200 subjects) and 6x6-mm (300 subjects) a combination of healthy and diseased eyes, i.e., AMD, DR, CNV and RVO. The dataset provides images and annotations, six different maximum intensity projection images (covering various retinal depths), four types of text labels (age/gender/eye/disease) and seven types of segmentation labels (large vessels/capillary/artery/vein/2D FAZ/3D FAZ/retinal layers). Images are collected with RTVue-XR, Optovue, CA). The OCT and OCTA datasets are available <a href="https://ieee-dataport.org/open-access/octa-500">here</a>. <span class="font-bold">Publication</span>: Li et al. OCTA-500: A retinal dataset for optical coherence tomography angiography study. Medical Image Analysis 93 103092 (2024).
+A dataset of OCT and OCTA images: 3x3-mm (200 subjects) and 6x6-mm (300 subjects) a combination of healthy and diseased eyes, i.e., AMD, DR, CNV and RVO.
+The dataset provides images and annotations, six different maximum intensity projection images (covering various retinal depths), four types of text labels (age/gender/eye/disease) and seven types of segmentation labels (large vessels/capillary/artery/vein/2D FAZ/3D FAZ/retinal layers).
+Images are collected with RTVue-XR, Optovue, CA).
+The OCT and OCTA datasets are available <a className="text-primary-400 underline" href="https://ieee-dataport.org/open-access/octa-500">here</a>.
+<span class="font-bold">Publication</span>: Li et al. OCTA-500: A retinal dataset for optical coherence tomography angiography study.
+Medical Image Analysis 93 103092 (2024).
