hide the extended navigation menu if there is a click outside of the component

--- a/data/resource/MarkVCID.mdx
+++ b/data/resource/MarkVCID.mdx
@@ -6,9 +6,9 @@ category: 'PROTOCOLS AND INITIATIVES'
 draft: false
 ---
 
-<span class="font-red">MarkVCID</span> cerebral small vessel consortium of institutions US and Canada based – formed under cooperative agreements with the National Institute of Neurologic Diseases and Stroke and National Institute on Ageing with the goals of developing and validating biomarkers for the cerebral small vessel diseases.
+<span className="font-red">MarkVCID</span> cerebral small vessel consortium of institutions US and Canada based – formed under cooperative agreements with the National Institute of Neurologic Diseases and Stroke and National Institute on Ageing with the goals of developing and validating biomarkers for the cerebral small vessel diseases.
 Study protocol available <a className="text-primary-400 underline" href="https://markvcid.partners.org/sites/default/files/external/protocols/MarkVCID_OCTA_VSD_Biomarker_Kit_Protocol_v6.11.20_Final.pdf">here</a>.
-<span class="font-bold">Publications</span>: Wilcock D, et al.; MarkVCID Consortium. “MarkVCID cerebral small vessel consortium: I. Enrollment, clinical, fluid protocols.” Alzheimers Dement. 2021 Apr;17(4):704-715.
+<span className="font-bold">Publications</span>: Wilcock D, et al.; MarkVCID Consortium. “MarkVCID cerebral small vessel consortium: I. Enrollment, clinical, fluid protocols.” Alzheimers Dement. 2021 Apr;17(4):704-715.
 doi: 10.1002/alz.12215. Epub 2021 Jan 21. PMID: 33480172; PMCID: PMC8122220. | DOI: 10.1002/alz.12215;
 <a className="text-primary-400 underline" href="https://pubmed.ncbi.nlm.nih.gov/33480172/">https://pubmed.ncbi.nlm.nih.gov/33480172/</a> and Lu H, et al.; MarkVCID Consortium. “MarkVCID cerebral small vessel consortium: II. Neuroimaging protocols.” Alzheimers Dement. 2021 Apr;17(4):716-725.
 doi: 10.1002/alz.12216. Epub 2021 Jan 21. PMID: 33480157 | DOI: 10.1002/alz.12216; <a className="text-primary-400 underline" href="https://pubmed.ncbi.nlm.nih.gov/33480157/">https://pubmed.ncbi.nlm.nih.gov/33480157/</a>
