apply changes from updated materials

--- a/data/blog/about.mdx
+++ b/data/blog/about.mdx
@@ -6,11 +6,14 @@ layout: PostBanner
 summary: The scenic lands of Canada featuring maple leaves, snow-capped mountains, turquoise lakes and Toronto. Take in the sights in this photo gallery exhibition and see how easy it is to replicate with some MDX magic and tailwind classes.
 ---
 
-**Open Research Tools for Ophthalmology** is an initiative to promote reproducibility in ophthalmic research.
-The objective is to encourage collaborations across institutions and the development of multi-site projects that will lead to standardised imaging protocols, data analysis methods, and finding reporting in the ophthalmic field.
+**Open Research Tools for Ophthalmology** is an initiative to promote open science and reproducibility in eye research.
+ORTO, the Italian word for a vegetable garden, is a powerful metaphor for promoting open science in eye research.
+The garden and open science represent systems where open exchange, collaboration, best practices, and the pooling of resources lead to richer, more sustainable outcomes.
+Just as a garden flourishes when all its elements are accessible and nurtured, open science accelerates progress by making scientific knowledge freely available, enabling discoveries to grow and evolve through shared effort and transparency.
 
+ORTO aims to encourage collaborations across institutions and the development of multi-site projects that will lead to standardised imaging protocols, data analysis methods, and finding reporting in the ophthalmic field.
 We aim to establish a repository of data analysis software, ophthalmic images, and protocols towards standardising methods between instruments and across different institutions, with the overall goal of supporting new knowledge generation about ocular diseases and identifying the best biomarkers for early diagnosis, monitoring of progression, and response to treatments in retinal disease.
-Please note that we are not able to validate all existing resources; therefore, the user has to validate the usefulness of available resources for research. 
+Please note that we are not able to validate all existing resources; therefore, the user must assess for themself the usefulness of available resources for their research.
 
 ---
 <div className="-mx-2 flex flex-wrap overflow-hidden xl:-mx-2">
