--- a/data/publication/AIROGS Artificial intelligence for robust glaucoma screening challenge.mdx
+++ b/data/publication/AIROGS Artificial intelligence for robust glaucoma screening challenge.mdx
@@ -1,6 +1,6 @@
 ---
 authors: 'de Vente, C., et al'
-date: '2024-12-29'
+date: '2024-12-25'
 year: 2024
 topics: ['Datasets', 'Software tools', 'Glaucoma']
 draft: false
@@ -8,4 +8,4 @@ doi: 'https://doi.org/10.1109/TMI.2023.3313786'
 pmid: 'https://pubmed.ncbi.nlm.nih.gov/37713220/'
 ---
 
-AIROGS: Artificial Intelligence for Robust Glaucoma Screening Challenge. IEEE transactions on medical imaging, 43(1), 542–557.
+AIROGS: Artificial intelligence for robust glaucoma screening challenge. IEEE transactions on medical imaging, 43(1), 542–557.
