--- a/data/publication/Artificial Intelligence Screening for Diabetic Retinopathy the Real-World Emerging Application.mdx
+++ b/data/publication/Artificial Intelligence Screening for Diabetic Retinopathy the Real-World Emerging Application.mdx
@@ -1,11 +1,12 @@
 ---
 authors: 'Bellemo, V., et al.'
-date: "2019-12-29"
+date: "2019-12-28"
 year: 2019
-topics: ['Datasets', 'Software tools', 'DR']
+topics: ['Datasets', 'Software tools', 'Diabetic retinopathy (DR)']
 draft: false
 doi: 'https://doi.org/10.1007/s11892-019-1189-3'
 pmid: 'https://pubmed.ncbi.nlm.nih.gov/31367962/'
 ---
 
-Artificial Intelligence Screening for Diabetic Retinopathy: the Real-World Emerging Application. Current diabetes reports, 19(9), 72.
+Artificial intelligence screening for diabetic retinopathy: the real-world emerging application.
+*Current diabetes reports*, 19(9), 72.
