--- a/data/publication/From Data to Deployment The Collaborative Community on Ophthalmic Imaging Roadmap for Artificial Intelligence in Age-Related Macular Degeneration.mdx
+++ b/data/publication/From Data to Deployment The Collaborative Community on Ophthalmic Imaging Roadmap for Artificial Intelligence in Age-Related Macular Degeneration.mdx
@@ -2,10 +2,11 @@
 authors: 'Dow, E. R., et al.'
 date: "2022-12-30"
 year: 2022
-topics: ['Review and roadmaps', 'AMD']
+topics: ['Review and roadmaps', 'Age-related macular degeneration (AMD)']
 draft: false
 doi: 'https://doi.org/10.1016/j.ophtha.2022.01.002'
 pmid: 'https://pubmed.ncbi.nlm.nih.gov/35016892/'
 ---
 
-From Data to Deployment: The Collaborative Community on Ophthalmic Imaging Roadmap for Artificial Intelligence in Age-Related Macular Degeneration. Ophthalmology, 129(5), e43–e59.
+From Data to Deployment: The collaborative community on ophthalmic imaging roadmap for artificial intelligence in age-related macular degeneration.
+*Ophthalmology*, 129(5), e43–e59.
