--- a/data/publication/Guidelines for clinical trial protocols for interventions involving artificial intelligence the SPIRIT-AI extension.mdx
+++ b/data/publication/Guidelines for clinical trial protocols for interventions involving artificial intelligence the SPIRIT-AI extension.mdx
@@ -1,6 +1,6 @@
 ---
-authors: 'Nature medicine, 26(9), 1351–1363.'
-date: "2020-12-30"
+authors: 'Cruz Rivera, et al.'
+date: "2020-12-29"
 year: 2020
 topics: ['Open science general resources']
 draft: false
@@ -8,4 +8,5 @@ doi: 'https://doi.org/10.1038/s41591-020-1037-7'
 pmid: 'https://pubmed.ncbi.nlm.nih.gov/32908284/'
 ---
 
-Guidelines for clinical trial protocols for interventions involving artificial intelligence: the SPIRIT-AI extension. *Nature medicine, 26*(9), 1351–1363.
+Guidelines for clinical trial protocols for interventions involving artificial intelligence: the SPIRIT-AI extension.
+*Nature medicine, 26*(9), 1351–1363.
