--- a/data/publication/Prospective evaluation of an artificial intelligence-enabled algorithm for automated diabetic retinopathy screening of 30000 patients.mdx
+++ b/data/publication/Prospective evaluation of an artificial intelligence-enabled algorithm for automated diabetic retinopathy screening of 30000 patients.mdx
@@ -1,11 +1,12 @@
 ---
 authors: 'Heydon, P., et al.'
-date: "2021-12-30"
+date: "2021-12-27"
 year: 2021
-topics: ['Datasets', 'Software tools', 'DR']
+topics: ['Datasets', 'Software tools', 'Diabetic retinopathy (DR)']
 draft: false
 doi: 'https://doi.org/10.1136/bjophthalmol-2020-316594'
 pmid: 'https://pubmed.ncbi.nlm.nih.gov/32606081/'
 ---
 
-Prospective evaluation of an artificial intelligence-enabled algorithm for automated diabetic retinopathy screening of 30 000 patients. *The British journal of ophthalmology, 105*(5), 723–728.
+Prospective evaluation of an artificial intelligence-enabled algorithm for automated diabetic retinopathy screening of 30 000 patients.
+*The British journal of ophthalmology, 105*(5), 723–728.
