--- a/data/resource/COIN.mdx
+++ b/data/resource/COIN.mdx
@@ -3,9 +3,9 @@ title: 'COIN'
 date: '2024-12-30'
 topic: 'PROTOCOLS AND INITIATIVES'
 category: 'PROTOCOLS AND INITIATIVES'
-href: 'https://www.ocularimaging.net/home'
 draft: false
 ---
 
-<span className="font-red">COIN</span> is a global research consortium established in 2019as a common platform connecting researchers worldwide to contribute to the progress of eye research.
-They provide updates on the research progress of ocular imaging biomarkers, including choroid vascularity index (CVI), vitreous haze index (VHI), retinal vascularity index (RVI)
+<span className="font-bold">COIN</span> is a global research consortium established in 2019 as a common platform connecting researchers worldwide to contribute to the progress of eye research.
+The group provides updates on the research progress of ocular imaging biomarkers, including choroid vascularity index (CVI), vitreous haze index (VHI), retinal vascularity index (RVI).
+For more information to the website <a className="text-primary-400 underline" href="https://www.ocularimaging.net/home">[here]</a>.
