--- a/data/resource/OCTAVA.mdx
+++ b/data/resource/OCTAVA.mdx
@@ -5,3 +5,15 @@ topic: 'OPTICAL COHERENCE TOMOGRAPHY ANGIOGRAPHY'
 category: 'OPEN-SOURCE SOFTWARE TOOLS'
 draft: false
 ---
+
+A semi-automated software tool developed in MATLAB, designed as a stand-alone application  with an intuitive graphical user interface (GUI).
+It leverages advanced image processing techniques, including the Frangi vesselness filter and the Fuzzy C-means algorithm, to perform vessel segmentation.
+The toolbox generates a range of microvascular metrics, including seven metrics for the entire image or selected subregions, and six specific metrics for characterizing the foveal avascular zone (FAZ).
+OCTAVA offers two distinct operating modes: a single-image processing mode for individual analyses and a batch processing mode for handling multiple images simultaneously, all with minimal user input.
+In both modes, the software follows the same image processing workflow to ensure consistency.
+The software provides users with a comprehensive set of outputs, including binarized, skeletonized, and FAZ-segmented images, allowing for visual inspection of the analysis results.
+Quantitative metrics are saved in an Excel file, making it easy for users to access and further analyse the raw data.
+For more information on how to use OCTAVA, you can watch the introductory video [here],
+read the peer-reviewed paper <a className="text-primary-400 underline" href="https://www.nature.com/articles/s41598-024-53501-6">[here]</a>,
+download Matlab app and the source code on Github <a className="text-primary-400 underline" href="https://github.com/GUntracht/OCTAVA">[here]</a>
+or stand-alone version <a className="text-primary-400 underline" href="https://sourceforge.net/projects/octava/files/">[here]</a>.
