--- a/data/resource/ROSE.mdx
+++ b/data/resource/ROSE.mdx
@@ -8,8 +8,9 @@ draft: false
 ---
 
 A dataset comprising 229 OCTA images with vessel annotations at either centerline-level or pixel-level.
-ROSE-1 consists of 117, OCTA images from 13 healthy controls and 26 subjects with Alzheimer’s disease collected with RTVue XR Avanti (Optovue).
-The image size is 3x3-mm. The dataset includes images from the superficial vascular plexus, deep vascular plexus and combined superficial and deep capillary plexus.
-ROSE-2 consists of 112 OCTA images taken from 112 eyes with various macular diseases with the Heidelberg OCT2 system (Heidelberg).
-The image size is 3x3-mm. The datasets are available <a className="text-primary-400 underline" href="https://imed.nimte.ac.cn/dataofrose.html">here</a>.
-<a className="font-bold">Publication</a>: Ma Y, et al. ROSE: A Retinal OCT-angiography vessel segmentation dataset and new model. IEEE Trans Med Imaging. 40(3):928-939 (2021).
+ROSE-1 consists of 117, OCTA images from 13 healthy controls and 26 subjects with Alzheimer’s disease collected with RTVue XR Avanti (Optovue, CA, USA)
+The image size is 3x3-mm.
+The dataset includes images from the superficial vascular plexus, deep vascular plexus and combined superficial and deep capillary plexus.
+ROSE-2 consists of 112 OCTA images taken from 112 eyes with various macular diseases collected with the Heidelberg OCT2 system (Heidelberg, Germany).
+The image size is 3x3-mm.
+The datasets are available <a className="text-primary-400 underline" href="https://imed.nimte.ac.cn/dataofrose.html">[here]</a> and the publication is <a className="text-primary-400 underline" href="https://ieeexplore.ieee.org/document/9284503">[here]</a>. 
