--- a/data/authors/danuta.mdx
+++ b/data/authors/danuta.mdx
@@ -8,6 +8,8 @@ linkedin: https://www.linkedin.com/in/danuta-danka-sampson-31754579/
 twitter: https://x.com/damasampson
 ---
 
-<a href="https://research-repository.uwa.edu.au/en/persons/danka-sampson">Danuta (Danka) Sampson</a> is an internationally trained translational researcher jointly appointed between the Lions Eye Institute and the University of Western Australia. She designs and constructs non-invasive optics-based imaging instruments and develops standardised workflows for ophthalmic image and data analysis. Her long-term career goal is to equip clinicians, biologists and scientists with standardised hardware and software tools to study retinal neuro-vascular units in health and disease, prevent and monitor retinal photoreceptors and vascular diseases, and make a real difference to patients.
+<a href="https://research-repository.uwa.edu.au/en/persons/danka-sampson">Danuta (Danka) Sampson</a> is an internationally trained translational researcher jointly appointed between the Lions Eye Institute and the University of Western Australia.
+She designs and constructs non-invasive optics-based imaging instruments and develops standardised workflows for ophthalmic image and data analysis.
+Her long-term career goal is to equip clinicians, biologists and scientists with standardised hardware and software tools to study retinal neuro-vascular units in health and disease, prevent and monitor retinal photoreceptors and vascular diseases, and make a real difference to patients.
 
 <span className="font-bold">Email</span>: Danuta.sampson@lei.org.au
