--- a/data/authors/madeleine.mdx
+++ b/data/authors/madeleine.mdx
@@ -6,6 +6,10 @@ company: University of Chicago
 email: Danuta.sampson@lei.org.au 
 ---
 
-<a href="https://datascience.uchicago.edu/people/madeleine-torcasso/">Madeleine Torcasso</a> is an AI in Science Postdoctoral Fellow at the University of Chicago in the Department of Radiology. Her expertise is in quantitative bio-image analysis using machine learning and other computer vision methods. She is passionate about helping create open-source tools to help support researchers in producing reproducible results.
+<a href="https://datascience.uchicago.edu/people/madeleine-torcasso/">Madeleine Torcasso</a> is a postdoctoral researcher in the Department of Radiology at the University of Chicago.
+She received her bachelor’s degree in Biomedical Engineering from Vanderbilt University in 2013 and her PhD in Biomedical Engineering from Texas A&M University in 2018.
+She currently works with AI to quantify high-content optical microscopy images of human tissue samples.
+She is also interested in using AI to merge data from multiple imaging modalities to improve predictive models, and is passionate about helping create open-source tools to help support researchers in producing reproducible results.
+In her free time, she likes to get away from the computer and run, hike, or walk; anything to stay active!
 
 <span className="font-bold">Email</span>: durkeems@uchicago.edu
