--- a/data/publication/A Clinicians Guide to Sharing Data for AI in Ophthalmology.mdx
+++ b/data/publication/A Clinicians Guide to Sharing Data for AI in Ophthalmology.mdx
@@ -1,6 +1,6 @@
 ---
 authors: 'Gim, N., et al.'
-date: '2024-12-30'
+date: '2024-12-29'
 year: 2024
 topics: ['Protocols', 'Review and roadmaps']
 draft: false
@@ -8,4 +8,4 @@ doi: 'https://doi.org/10.1167/iovs.65.6.21'
 pmid: 'https://pubmed.ncbi.nlm.nih.gov/38864811/'
 ---
 
-A Clinician's Guide to Sharing Data for AI in Ophthalmology. *Investigative ophthalmology & visual science, 65*(6), 21.
+A clinician's guide to sharing data for ai in ophthalmology. *Investigative ophthalmology & visual science, 65*(6), 21.
