--- a/data/publication/Artificial intelligence and deep learning in ophthalmology.mdx
+++ b/data/publication/Artificial intelligence and deep learning in ophthalmology.mdx
@@ -8,4 +8,5 @@ doi: 'https://doi.org/10.1136/bjophthalmol-2018-313173'
 pmid: 'https://pubmed.ncbi.nlm.nih.gov/30361278/'
 ---
 
-Artificial intelligence and deep learning in ophthalmology. *The British journal of ophthalmology, 103*(2), 167–175.
+Artificial intelligence and deep learning in ophthalmology.
+*The British journal of ophthalmology, 103*(2), 167–175.
