--- a/data/publication/Characteristics of a Large, Labeled Data Set for the Training of Artificial Intelligence for Glaucoma Screening with Fundus Photographs.mdx
+++ b/data/publication/Characteristics of a Large, Labeled Data Set for the Training of Artificial Intelligence for Glaucoma Screening with Fundus Photographs.mdx
@@ -8,4 +8,5 @@ doi: 'https://doi.org/10.1016/j.xops.2023.100300'
 pmid: 'https://pubmed.ncbi.nlm.nih.gov/37113471/'
 ---
 
-Characteristics of a Large, Labeled Data Set for the Training of Artificial Intelligence for Glaucoma Screening with Fundus Photographs. *Ophthalmology science, 3*(3), 100300.
+Characteristics of a large, labeled data set for the training of artificial intelligence for glaucoma screening with fundus photographs.
+*Ophthalmology science, 3*(3), 100300.
