--- a/data/publication/Deep learning versus human graders for classifying diabetic retinopathy severity in a nationwide screening program.mdx
+++ b/data/publication/Deep learning versus human graders for classifying diabetic retinopathy severity in a nationwide screening program.mdx
@@ -1,11 +1,12 @@
 ---
 authors: 'Raumviboonsuk, P., et al.'
-date: "2019-12-28"
+date: "2019-12-27"
 year: 2019
-topics: ['Datasets', 'Software tools', 'DR']
+topics: ['Datasets', 'Software tools', 'Diabetic retinopathy (DR)']
 draft: false
 doi: 'https://doi.org/10.1038/s41746-019-0099-8'
 pmid: 'https://pubmed.ncbi.nlm.nih.gov/31304372/'
 ---
 
-Deep learning versus human graders for classifying diabetic retinopathy severity in a nationwide screening program. *NPJ digital medicine, 2*, 25.
+Deep learning versus human graders for classifying diabetic retinopathy severity in a nationwide screening program.
+*NPJ digital medicine, 2*, 25.
