--- a/data/publication/Pivotal Evaluation of an Artificial Intelligence System for Autonomous Detection of Referrable and Vision-Threatening Diabetic Retinopathy.mdx
+++ b/data/publication/Pivotal Evaluation of an Artificial Intelligence System for Autonomous Detection of Referrable and Vision-Threatening Diabetic Retinopathy.mdx
@@ -1,11 +1,12 @@
 ---
 authors: 'Ipp, E., et al.'
-date: "2021-12-29"
+date: "2021-12-26"
 year: 2021
-topics: ['Datasets', 'Software tools', 'DR']
+topics: ['Datasets', 'Software tools', 'Diabetic retinopathy (DR)']
 draft: false
 doi: 'https://doi.org/10.1001/jamanetworkopen.2021.34254'
 pmid: 'https://pubmed.ncbi.nlm.nih.gov/34779843/'
 ---
 
-Pivotal Evaluation of an Artificial Intelligence System for Autonomous Detection of Referrable and Vision-Threatening Diabetic Retinopathy. JAMA network open, 4(11), e2134254.
+Pivotal evaluation of an artificial intelligence system for autonomous detection of referrable and vision-threatening diabetic retinopathy.
+*JAMA network open*, 4(11), e2134254.
