--- a/data/publication/Pivotal trial of an autonomous AI-based diagnostic system for detection of diabetic retinopathy in primary care offices.mdx
+++ b/data/publication/Pivotal trial of an autonomous AI-based diagnostic system for detection of diabetic retinopathy in primary care offices.mdx
@@ -2,10 +2,11 @@
 authors: 'Abràmoff, M. D., et al.'
 date: "2018-12-30"
 year: 2018
-topics: ['Datasets', 'Software tools', 'DR']
+topics: ['Datasets', 'Software tools', 'Diabetic retinopathy (DR)']
 draft: false
 doi: 'https://doi.org/10.1038/s41746-018-0040-6'
 pmid: 'https://pubmed.ncbi.nlm.nih.gov/31304320/'
 ---
 
-Pivotal trial of an autonomous AI-based diagnostic system for detection of diabetic retinopathy in primary care offices. NPJ digital medicine, 1, 39.
+Pivotal trial of an autonomous AI-based diagnostic system for detection of diabetic retinopathy in primary care offices.
+*NPJ digital medicine*, 1, 39.
