--- a/data/publication/Real-world artificial intelligence-based opportunistic screening for diabetic retinopathy in endocrinology and indigenous healthcare settings in Australia.mdx
+++ b/data/publication/Real-world artificial intelligence-based opportunistic screening for diabetic retinopathy in endocrinology and indigenous healthcare settings in Australia.mdx
@@ -1,11 +1,12 @@
 ---
-authors: 'Ipp, E., et al.'
-date: "2021-12-28"
+authors: 'Scheetz, J., et al.'
+date: "2021-12-25"
 year: 2021
-topics: ['Datasets', 'DR']
+topics: ['Datasets', 'Diabetic retinopathy (DR)']
 draft: false
 doi: 'https://doi.org/10.1038/s41598-021-94178-5'
 pmid: 'https://pubmed.ncbi.nlm.nih.gov/34349130/'
 ---
 
-Real-world artificial intelligence-based opportunistic screening for diabetic retinopathy in endocrinology and indigenous healthcare settings in Australia. *Scientific reports, 11*(1), 15808.
+Real-world artificial intelligence-based opportunistic screening for diabetic retinopathy in endocrinology and indigenous healthcare settings in Australia.
+*Scientific reports, 11*(1), 15808.
