--- a/data/publication/Towards standardising retinal OCT angiography image analysis with open-source toolbox OCTAVA.mdx
+++ b/data/publication/Towards standardising retinal OCT angiography image analysis with open-source toolbox OCTAVA.mdx
@@ -1,6 +1,6 @@
 ---
 authors: 'Untracht, G. R., et al.'
-date: '2024-12-28'
+date: '2024-12-24'
 year: 2024
 topics: ['Software tools']
 draft: false
@@ -8,4 +8,5 @@ doi: 'https://doi.org/10.1038/s41598-024-53501-6'
 pmid: 'https://pubmed.ncbi.nlm.nih.gov/38472220/'
 ---
 
-Towards standardising retinal OCT angiography image analysis with open-source toolbox OCTAVA. *Scientific reports, 14*(1), 5979.
+Towards standardising retinal OCT angiography image analysis with open-source toolbox OCTAVA.
+*Scientific reports, 14*(1), 5979.
