--- a/data/publication/Towards standardizing retinal optical coherence tomography angiography a review.mdx
+++ b/data/publication/Towards standardizing retinal optical coherence tomography angiography a review.mdx
@@ -1,6 +1,6 @@
 ---
 authors: 'Sampson, D. M., et al.'
-date: "2022-12-29"
+date: "2022-12-27"
 year: 2022
 topics: ['Review and roadmaps', 'Protocols']
 draft: false
@@ -8,4 +8,5 @@ doi: 'https://doi.org/10.1038/s41377-022-00740-9'
 pmid: 'https://pubmed.ncbi.nlm.nih.gov/35304441/'
 ---
 
-Towards standardizing retinal optical coherence tomography angiography: a review. *Light, science & applications, 11*(1), 63.
+Towards standardizing retinal optical coherence tomography angiography: a review.
+*Light, science & applications, 11*(1), 63.
