--- a/data/publication/Trustworthy AI Closing the gap between development and integration of AI systems in ophthalmic practice copy 2.mdx
+++ b/data/publication/Trustworthy AI Closing the gap between development and integration of AI systems in ophthalmic practice copy 2.mdx
@@ -1,6 +1,6 @@
 ---
 authors: 'González-Gonzalo, C., et al.'
-date: "2022-12-28"
+date: "2022-12-26"
 year: 2022
 topics: ['Review and roadmaps']
 draft: false
@@ -8,4 +8,5 @@ doi: 'https://doi.org/10.1016/j.preteyeres.2021.101034'
 pmid: 'https://pubmed.ncbi.nlm.nih.gov/34902546/'
 ---
 
-Trustworthy AI: Closing the gap between development and integration of AI systems in ophthalmic practice. Progress in retinal and eye research, 90, 101034.
+Trustworthy AI: Closing the gap between development and integration of AI systems in ophthalmic practice.
+Progress in retinal and eye research, 90, 101034.
