--- a/data/resource/Erlangen-Angio-Tool (EA-Tool).mdx
+++ b/data/resource/Erlangen-Angio-Tool (EA-Tool).mdx
@@ -11,4 +11,4 @@ The software applies the Frangi vesselness filter and Otsu thresholding algorith
 After uploading the OCTA image, the user marks the centre of the macular region.
 It helps to divide the image into 11 sub-regions for analysis.
 The software delivers microvascular metrics such as vessel area density and foveal avascular zone area.
-The details can be found <a className="text-primary-400 underline" href="https://karger.com/oph/article/243/1/75/263894/OCT-Angiography-Measurement-of-Retinal-Macular">here</a>
+For more information about EA-TOOL, you can read the peer-reviewed paper <a className="text-primary-400 underline" href="https://karger.com/oph/article/243/1/75/263894/OCT-Angiography-Measurement-of-Retinal-Macular">[here]</a>.
