--- a/data/resource/GIARRATANO.mdx
+++ b/data/resource/GIARRATANO.mdx
@@ -12,4 +12,4 @@ The dataset includes maximum-intensity projection images. For each OCTA image, f
 The OCTA dataset is available <a className="text-primary-400 underline" href="https://doi.org/10.7488/ds/2729">here</a>.
 The associate source code is on <a className="text-primary-400 underline" href="https://github.com/giaylenia/OCTA_segm_study">GitHub</a>.
 <span className="font-bold">Publication</span>: Giarratano Y, et al. Automated segmentation of optical coherence tomography angiography images: benchmark data and clinically relevant metrics.
-Transl Vis Sci Technol. 9(13):5 (2020) doi: 10.1167/tvst.9.13.5. <a className="text-primary-400 underline" href="https://pubmed.ncbi.nlm.nih.gov/33344049/">https://pubmed.ncbi.nlm.nih.gov/33344049/</a>
+Transl Vis Sci Technol. 9(13):5 (2020) doi: 10.1167/tvst.9.13.5.
