--- a/data/resource/OCTA-ReVA.mdx
+++ b/data/resource/OCTA-ReVA.mdx
@@ -1,9 +1,8 @@
 ---
 title: 'OCTA-ReVA'
 date: '2024-12-30'
-topic: 'RETINA'
+topic: 'OPTICAL COHERENCE TOMOGRAPHY ANGIOGRAPHY'
 category: 'OPEN-SOURCE SOFTWARE TOOLS'
-href: 'https://github.com/fiifijackson/OCTA-ReVA?tab=readme-ov-file'
 draft: false
 ---
 
@@ -12,3 +11,4 @@ It supports single and batch processing.
 Enables saving of analysis results directly into Excel format and exporting of the images.
 The software applies the Frangi vesselness filter and five different segmentation methods (Otsu thresholding algorithm, fixed thresholding, mean thresholding, median thresholding, and the 3-sigma method).
 The software delivers several metrics, including blood vessel density (BVD), blood vessel tortuosity (BVT), blood vessel calibre (BVC), perfusion intensity density, vessel area flux and normalised blood flow index, fovea avascular zone area (FAZA), FAZ perimeter, FAZ irregularity.
+The details can be found <a className="text-primary-400 underline" href="https://opg.optica.org/boe/fulltext.cfm?uri=boe-15-10-6010&id=560083">[here]</a>. The source code is <a className="text-primary-400 underline" href="https://github.com/fiifijackson/OCTA-ReVA?tab=readme-ov-file">[here]</a>.
