--- a/data/blog/about.mdx
+++ b/data/blog/about.mdx
@@ -3,6 +3,7 @@ title: About ORTO
 date: '2024-11-14'
 draft: false
 layout: PostBanner
+images: ['/static/images/about.jpg']
 summary: The scenic lands of Canada featuring maple leaves, snow-capped mountains, turquoise lakes and Toronto. Take in the sights in this photo gallery exhibition and see how easy it is to replicate with some MDX magic and tailwind classes.
 ---
 
@@ -14,13 +15,3 @@ Just as a garden flourishes when all its elements are accessible and nurtured, o
 ORTO aims to encourage collaborations across institutions and the development of multi-site projects that will lead to standardised imaging protocols, data analysis methods, and finding reporting in the ophthalmic field.
 We aim to establish a repository of data analysis software, ophthalmic images, and protocols towards standardising methods between instruments and across different institutions, with the overall goal of supporting new knowledge generation about ocular diseases and identifying the best biomarkers for early diagnosis, monitoring of progression, and response to treatments in retinal disease.
 Please note that we are not able to validate all existing resources; therefore, the user must assess for themself the usefulness of available resources for their research.
-
----
-<div className="-mx-2 flex flex-wrap overflow-hidden xl:-mx-2">
-  <div className="my-1 w-full overflow-hidden px-2 xl:my-1 xl:w-1/2 xl:px-2">
-    ![Maple](/static/images/canada/maple.jpg)
-  </div>
-  <div className="my-1 w-full overflow-hidden px-2 xl:my-1 xl:w-1/2 xl:px-2">
-    ![Lake](/static/images/canada/lake.jpg)
-  </div>
-</div>
