--- a/data/blog/about.mdx
+++ b/data/blog/about.mdx
@@ -4,7 +4,7 @@ date: '2024-11-14'
 draft: false
 layout: PostBanner
 images: ['/static/images/about.jpg']
-summary: The scenic lands of Canada featuring maple leaves, snow-capped mountains, turquoise lakes and Toronto. Take in the sights in this photo gallery exhibition and see how easy it is to replicate with some MDX magic and tailwind classes.
+summary: Open Research Tools for Ophthalmology is an initiative to promote open science and reproducibility in eye research.
 ---
 
 **Open Research Tools for Ophthalmology** is an initiative to promote open science and reproducibility in eye research.
