--- a/data/publication/Seven steps to enhance Open Science practices in animal science.mdx
+++ b/data/publication/Seven steps to enhance Open Science practices in animal science.mdx
@@ -4,7 +4,7 @@ date: "2022-12-24"
 year: 2022
 topics: ['Open science general resources']
 draft: false
-doi: 'https://google.com'
+doi: 'https://doi.org/10.1093/pnasnexus/pgac106'
 pmid: 'https://pubmed.ncbi.nlm.nih.gov/36741429/'
 ---
 
