--- a/data/resource/Global Young Academy - Open Science Working Group.mdx
+++ b/data/resource/Global Young Academy - Open Science Working Group.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'lobal Young Academy - Open Science Working Group'
+title: 'Global Young Academy - Open Science Working Group'
 date: '2024-12-30'
 topic: 'OPEN-SCIENCE GENERAL RESOURCES'
 category: 'OPEN-SCIENCE GENERAL RESOURCES'
