universally open links in new tab

--- a/data/resource/Academic Data Science Alliance.mdx
+++ b/data/resource/Academic Data Science Alliance.mdx
@@ -6,5 +6,5 @@ category: 'OPEN-SCIENCE GENERAL RESOURCES'
 draft: false
 ---
 
-<a className="text-400 underline" href="http://academicdatascience.org/">WEBSITE</a>
+<a className="text-400 underline" target="_blank" href="http://academicdatascience.org/">WEBSITE</a>
 
