--- a/data/resource/COIN.mdx
+++ b/data/resource/COIN.mdx
@@ -8,4 +8,4 @@ draft: false
 
 <span className="font-bold">COIN</span> is a global research consortium established in 2019 as a common platform connecting researchers worldwide to contribute to the progress of eye research.
 The group provides updates on the research progress of ocular imaging biomarkers, including choroid vascularity index (CVI), vitreous haze index (VHI), retinal vascularity index (RVI).
-For more information to the website <a className="text-primary-400 underline" href="https://www.ocularimaging.net/home">[here]</a>.
+For more information to the website <a className="text-primary-400 underline" target="_blank" href="https://www.ocularimaging.net/home">[here]</a>.
