--- a/data/resource/Clinicaltrials.mdx
+++ b/data/resource/Clinicaltrials.mdx
@@ -10,5 +10,5 @@ ClinicalTrials.gov is a website and online database of clinical research studies
 The purpose of ClinicalTrials.gov is to provide information about clinical research studies to the public, researchers, and health care professionals.
 The U.S. government does not review or approve the safety and science of all studies listed on this website.
 
-<a className="text-primary-400 underline" href="https://clinicaltrials.gov/">WEBSITE</a>
+<a className="text-primary-400 underline" target="_blank" href="https://clinicaltrials.gov/">WEBSITE</a>
 
