--- a/data/resource/Deep Learning based Intraretinal Fluid Segmentation on OCT.mdx
+++ b/data/resource/Deep Learning based Intraretinal Fluid Segmentation on OCT.mdx
@@ -7,5 +7,5 @@ draft: false
 ---
 
 A fully-automated, deep learning based, intraretinal fluid segmenter for optical coherence (OCT) images of the macula
-The source code can be found <a className="text-primary-400 underline" href="https://github.com/uw-biomedical-ml/irf-segmenter">[here]</a>.
+The source code can be found <a className="text-primary-400 underline" target="_blank" href="https://github.com/uw-biomedical-ml/irf-segmenter">[here]</a>.
 
