--- a/data/resource/GIARRATANO.mdx
+++ b/data/resource/GIARRATANO.mdx
@@ -9,7 +9,7 @@ draft: false
 
 An open dataset of <span className="font-bold">retinal parafoveal optical coherence tomography angiography</span> (OCTA) 3×3-mm images (RTVue-XR Avanti, Optovue) from 11 participants (both eyes) not presenting ocular disease, age 44-59) with associated ground truth manual segmentations.
 The dataset includes maximum-intensity projection images. For each OCTA image, five sub-images were extracted and binarised.
-The OCTA dataset is available <a className="text-primary-400 underline" href="https://doi.org/10.7488/ds/2729">here</a>.
-The associate source code is on <a className="text-primary-400 underline" href="https://github.com/giaylenia/OCTA_segm_study">GitHub</a>.
+The OCTA dataset is available <a className="text-primary-400 underline" target="_blank" href="https://doi.org/10.7488/ds/2729">here</a>.
+The associate source code is on <a className="text-primary-400 underline" target="_blank" href="https://github.com/giaylenia/OCTA_segm_study">GitHub</a>.
 <span className="font-bold">Publication</span>: Giarratano Y, et al. Automated segmentation of optical coherence tomography angiography images: benchmark data and clinically relevant metrics.
 Transl Vis Sci Technol. 9(13):5 (2020) doi: 10.1167/tvst.9.13.5.
