--- a/data/resource/HDR UK.mdx
+++ b/data/resource/HDR UK.mdx
@@ -10,5 +10,5 @@ Health Data Research UK (HDR UK) IS UK's national institute for health data scie
 with a vision that every health interaction and research endeavour will be enhanced by access to large scale data and advanced analytics.
 Their gateway streamlines the end-to-end user journey to search, discover and request access to the wealth of health and associated Datasets.
 
-<a className="text-primary-400 underline" href="https://www.hdruk.ac.uk/">WEBSITE</a>
+<a className="text-primary-400 underline" target="_blank" href="https://www.hdruk.ac.uk/">WEBSITE</a>
 
