--- a/data/resource/Nature portfolio.mdx
+++ b/data/resource/Nature portfolio.mdx
@@ -11,5 +11,5 @@ The journals publish not only primary research but also reviews, critical commen
 
 Thousands of ophthalmology journals are available here:
 
-<a className="text-primary-400 underline" href="https://www.nature.com/search?q=ophthalmology&journal=">WEBSITE</a>
+<a className="text-primary-400 underline" target="_blank" href="https://www.nature.com/search?q=ophthalmology&journal=">WEBSITE</a>
 
