--- a/data/resource/OCTAVA.mdx
+++ b/data/resource/OCTAVA.mdx
@@ -14,6 +14,6 @@ In both modes, the software follows the same image processing workflow to ensure
 The software provides users with a comprehensive set of outputs, including binarized, skeletonized, and FAZ-segmented images, allowing for visual inspection of the analysis results.
 Quantitative metrics are saved in an Excel file, making it easy for users to access and further analyse the raw data.
 For more information on how to use OCTAVA, you can watch the introductory video [here],
-read the peer-reviewed paper <a className="text-primary-400 underline" href="https://www.nature.com/articles/s41598-024-53501-6">[here]</a>,
-download Matlab app and the source code on Github <a className="text-primary-400 underline" href="https://github.com/GUntracht/OCTAVA">[here]</a>
-or stand-alone version <a className="text-primary-400 underline" href="https://sourceforge.net/projects/octava/files/">[here]</a>.
+read the peer-reviewed paper <a className="text-primary-400 underline" target="_blank" href="https://www.nature.com/articles/s41598-024-53501-6">[here]</a>,
+download Matlab app and the source code on Github <a className="text-primary-400 underline" target="_blank" href="https://github.com/GUntracht/OCTAVA">[here]</a>
+or stand-alone version <a className="text-primary-400 underline" target="_blank" href="https://sourceforge.net/projects/octava/files/">[here]</a>.
