--- a/data/resource/OMIM.mdx
+++ b/data/resource/OMIM.mdx
@@ -12,5 +12,5 @@ OMIM focuses on the relationship between phenotype and genotype.
 It is updated daily, and the entries contain copious links to other genetics resources.
 This database was initiated in the early 1960s by Dr. Victor A. McKusick as a catalog of mendelian traits and disorders, entitled Mendelian Inheritance in Man (MIM).
 
-<a className="text-primary-400 underline" href="https://www.omim.org/">WEBSITE</a>
+<a className="text-primary-400 underline" target="_blank" href="https://www.omim.org/">WEBSITE</a>
 
