--- a/data/resource/Online tool for collecting biomedical image segmentations.mdx
+++ b/data/resource/Online tool for collecting biomedical image segmentations.mdx
@@ -9,5 +9,5 @@ draft: false
 An online tool which allows the creation of image segmentation tasks that can be used to crowdsource and distribute such tasks.
 The site uses HTML5 and canvas to record the mouse positions and timings such that the segmentations can be replayed.
 In addition, it allows for binary masks to be downloaded for machine learning.
-The source code can be found <a className="text-primary-400 underline" href="https://github.com/uw-biomedical-ml/segmentations">[here]</a>
+The source code can be found <a className="text-primary-400 underline" target="_blank" href="https://github.com/uw-biomedical-ml/segmentations">[here]</a>
 
