--- a/data/resource/ROSE.mdx
+++ b/data/resource/ROSE.mdx
@@ -13,4 +13,4 @@ The image size is 3x3-mm.
 The dataset includes images from the superficial vascular plexus, deep vascular plexus and combined superficial and deep capillary plexus.
 ROSE-2 consists of 112 OCTA images taken from 112 eyes with various macular diseases collected with the Heidelberg OCT2 system (Heidelberg, Germany).
 The image size is 3x3-mm.
-The datasets are available <a className="text-primary-400 underline" href="https://imed.nimte.ac.cn/dataofrose.html">[here]</a> and the publication is <a className="text-primary-400 underline" href="https://ieeexplore.ieee.org/document/9284503">[here]</a>. 
+The datasets are available <a className="text-primary-400 underline" target="_blank" href="https://imed.nimte.ac.cn/dataofrose.html">[here]</a> and the publication is <a className="text-primary-400 underline" target="_blank" href="https://ieeexplore.ieee.org/document/9284503">[here]</a>. 
