--- a/data/resource/Transforming between MRI modalities using deep learning.mdx
+++ b/data/resource/Transforming between MRI modalities using deep learning.mdx
@@ -8,15 +8,15 @@ draft: false
 
 A deep convolutional network that learns the mapping between different MRI contrasts.
 This project aims to tranform between MRI modalities using deep learning.
-A preprint can be found here <a className="text-primary-400 underline" href="https://www.biorxiv.org/content/early/2018/03/27/289926">[here]</a>.
+A preprint can be found here <a className="text-primary-400 underline" target="_blank" href="https://www.biorxiv.org/content/early/2018/03/27/289926">[here]</a>.
 
 You can found the source code down below:
 
-<a className="text-primary-400 underline" href="https://github.com/uw-biomedical-ml/mri2mri">[mri2mri]</a>&nbsp;
+<a className="text-primary-400 underline" target="_blank" href="https://github.com/uw-biomedical-ml/mri2mri">[mri2mri]</a>&nbsp;
 
-<a className="text-primary-400 underline" href="https://github.com/uw-biomedical-ml/mri-transformation">[mri-transformation]</a>&nbsp;
+<a className="text-primary-400 underline" target="_blank" href="https://github.com/uw-biomedical-ml/mri-transformation">[mri-transformation]</a>&nbsp;
 
-<a className="text-primary-400 underline" href="https://github.com/uw-biomedical-ml/mri2mri_notebooks">[mri2mri_notebooks]</a>&nbsp;
+<a className="text-primary-400 underline" target="_blank" href="https://github.com/uw-biomedical-ml/mri2mri_notebooks">[mri2mri_notebooks]</a>&nbsp;
 
 
 
