--- a/data/resource/UK Biobank.mdx
+++ b/data/resource/UK Biobank.mdx
@@ -8,5 +8,5 @@ draft: false
 
 UK Biobank is a large-scale biomedical database and research resource containing de-identified genetic, lifestyle and health information and biological samples from half a million UK participants.
 
-<a className="text-primary-400 underline" href="https://www.ukbiobank.ac.uk/">WEBSITE</a>
+<a className="text-primary-400 underline" target="_blank" href="https://www.ukbiobank.ac.uk/">WEBSITE</a>
 
