--- a/data/resource/UNICORN.mdx
+++ b/data/resource/UNICORN.mdx
@@ -8,4 +8,4 @@ draft: false
 
 <span className="font-bold">UNICORN</span> (<span className="font-bold">uni</span>fied <span className="font-bold">co</span>mmentatory of the committee of inte<span className="font-bold">r</span>national experts on the nomenclature for <span className="font-bold">n</span>eovascular AMD in OCTA)
 – the international group that reviewed OCTA descriptors for OCTA in neovascular AMD and tested agreement of these terms among retinal imaging experts.
-For more information, read the peer-reviewed article <a className="text-primary-400 underline" href="https://pubmed.ncbi.nlm.nih.gov/33359557/">[here]</a>.
+For more information, read the peer-reviewed article <a className="text-primary-400 underline" target="_blank" href="https://pubmed.ncbi.nlm.nih.gov/33359557/">[here]</a>.
