--- a/data/resource/101 Innovations in Scholarly Communication.mdx
+++ b/data/resource/101 Innovations in Scholarly Communication.mdx
@@ -6,5 +6,5 @@ category: 'OPEN-SCIENCE GENERAL RESOURCES'
 draft: false
 ---
 
-<a className="text-400 underline" href="https://101innovations.wordpress.com/">WEBSITE</a>
+<a className="text-400 underline" target="_blank" href="https://101innovations.wordpress.com/">WEBSITE</a>
 
