--- a/data/resource/Deep Learning based OIR Quantification & Segmentation.mdx
+++ b/data/resource/Deep Learning based OIR Quantification & Segmentation.mdx
@@ -7,5 +7,5 @@ draft: false
 ---
 
 A code repository to train a CNN to do the segmentation of the vaso-obliteration zone and the neovascular tufts/clusters in the images obtained from the mouse model of oxygen-induced retinopathy (OIR).
-The source code can be found <a className="text-primary-400 underline" href="https://github.com/uw-biomedical-ml/oir">[here]</a>.
+The source code can be found <a className="text-primary-400 underline" target="_blank" href="https://github.com/uw-biomedical-ml/oir">[here]</a>.
 
