--- a/data/resource/Framework for Open and Reproducible Research Training (FORRT).mdx
+++ b/data/resource/Framework for Open and Reproducible Research Training (FORRT).mdx
@@ -6,5 +6,5 @@ category: 'OPEN-SCIENCE GENERAL RESOURCES'
 draft: false
 ---
 
-<a className="text-400 underline" href="https://forrt.org/">WEBSITE</a>
+<a className="text-400 underline" target="_blank" href="https://forrt.org/">WEBSITE</a>
 
