--- a/data/resource/Global Young Academy - Open Science Working Group.mdx
+++ b/data/resource/Global Young Academy - Open Science Working Group.mdx
@@ -6,5 +6,5 @@ category: 'OPEN-SCIENCE GENERAL RESOURCES'
 draft: false
 ---
 
-<a className="text-400 underline" href="https://globalyoungacademy.net/activities/open-science/">WEBSITE</a>
+<a className="text-400 underline" target="_blank" href="https://globalyoungacademy.net/activities/open-science/">WEBSITE</a>
 
