--- a/data/resource/Grand Challenge.mdx
+++ b/data/resource/Grand Challenge.mdx
@@ -8,5 +8,5 @@ draft: false
 Grand Challenge is a platform for end-to-end development of machine learning solutions in biomedical imaging.
 Hundreds of challenges are available with their provided datasets.
 
-<a className="text-primary-400 underline" href="https://101innovations.wordpress.com/">WEBSITE</a>
+<a className="text-primary-400 underline" target="_blank" href="https://101innovations.wordpress.com/">WEBSITE</a>
 
