--- a/data/resource/HVF Progression Deep Learning Model Architecture.mdx
+++ b/data/resource/HVF Progression Deep Learning Model Architecture.mdx
@@ -7,5 +7,5 @@ draft: false
 ---
 
 A code repository that holds all the code used to train the HVF Progression Deep Learning models.
-For more information about hvfProgression, you can read the paper <a className="text-primary-400 underline" href="https://www.biorxiv.org/content/10.1101/293621v1">[here]</a>.
-The source code is <a className="text-primary-400 underline" href="https://github.com/uw-biomedical-ml/hvfProgression">[here]</a>.
+For more information about hvfProgression, you can read the paper <a className="text-primary-400 underline" target="_blank" href="https://www.biorxiv.org/content/10.1101/293621v1">[here]</a>.
+The source code is <a className="text-primary-400 underline" target="_blank" href="https://github.com/uw-biomedical-ml/hvfProgression">[here]</a>.
