--- a/data/resource/MarkVCID.mdx
+++ b/data/resource/MarkVCID.mdx
@@ -8,5 +8,5 @@ draft: false
 
 <span className="font-red">MarkVCID</span> cerebral small vessel consortium of institutions US and Canada-based –
 formed under cooperative agreements with the National Institute of Neurologic Diseases and Stroke and National Institute on Ageing with the goals of developing and validating biomarkers for cerebral small vessel diseases.
-Study protocol available <a className="text-primary-400 underline" href="https://markvcid.partners.org/sites/default/files/external/protocols/MarkVCID_OCTA_VSD_Biomarker_Kit_Protocol_v6.11.20_Final.pdf">here</a>.
-Publications related to project are <a className="text-primary-400 underline" href="https://pubmed.ncbi.nlm.nih.gov/33480172/">[here]</a> and <a className="text-primary-400 underline" href="https://pubmed.ncbi.nlm.nih.gov/33480157/">[here]</a>. 
+Study protocol available <a className="text-primary-400 underline" target="_blank" href="https://markvcid.partners.org/sites/default/files/external/protocols/MarkVCID_OCTA_VSD_Biomarker_Kit_Protocol_v6.11.20_Final.pdf">here</a>.
+Publications related to project are <a className="text-primary-400 underline" target="_blank" href="https://pubmed.ncbi.nlm.nih.gov/33480172/">[here]</a> and <a className="text-primary-400 underline" target="_blank" href="https://pubmed.ncbi.nlm.nih.gov/33480157/">[here]</a>. 
