--- a/data/resource/Model-to-Data approach for training deep learning without moving data.mdx
+++ b/data/resource/Model-to-Data approach for training deep learning without moving data.mdx
@@ -8,7 +8,7 @@ draft: false
 
 An algorithm to train deep learning models without moving data, using a Model-to-Data approach.
 You can retrain the published IRF segmentation algorithm with your own data.
-The source code can be found <a className="text-primary-400 underline" href="https://github.com/uw-biomedical-ml/oct-irf-train">[here]</a>
+The source code can be found <a className="text-primary-400 underline" target="_blank" href="https://github.com/uw-biomedical-ml/oct-irf-train">[here]</a>
 
 
 
