--- a/data/resource/Tool for reading Heidelberg Spectralis imaging format.mdx
+++ b/data/resource/Tool for reading Heidelberg Spectralis imaging format.mdx
@@ -8,5 +8,5 @@ draft: false
 
 A tool implemented innative python for reading Heidelberg Heyex Spectralis files.
 The current version only supports the Heyex VOL files.
-The full documentation of this project is located <a className="text-primary-400 underline" href="http://heyexreader.readthedocs.io/">[here]</a>.
-The source code can be found <a className="text-primary-400 underline" href="https://github.com/ayl/heyexReader">[here]</a>.
+The full documentation of this project is located <a className="text-primary-400 underline" target="_blank" href="http://heyexreader.readthedocs.io/">[here]</a>.
+The source code can be found <a className="text-primary-400 underline" target="_blank" href="https://github.com/ayl/heyexReader">[here]</a>.
