add Mila Zhang to collaborator

--- a/data/authors/Dayu Liu.mdx
+++ b/data/authors/Dayu Liu.mdx
@@ -9,8 +9,9 @@ linkedin: https://www.linkedin.com/in/dayu-liu-55218515a/
 role: collaborator
 ---
 
-<a href="https://github.com/LDY681">Dayu Liu</a> is a postgraduate student at UWA studying for the Master of Software Engineering.
-He is passionate about the new and ever-evolving field of AI and has a strong background in software development.
+<a href="https://github.com/LDY681">Dayu Liu</a> is a professional software developer with 3 years of experience in building responsive and reliable applications for clients in top financial institutions.
+He is currently studying for the Master of Software Engineering at UWA to learn new things happening in the tech world.
+He is passionate about the new and evolving field of AI and data science.
 He took an internship at the Lions Eye Institute and worked closely with Danuta Sampson to make this website possible.
 
 <span className="font-bold">Email</span>: ldydyx@gmail.com
